--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,3 +38,11 @@ section#telefone {
     background-position: center;
     background-size: auto;
 }
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
